connect react-nativ app to web3 with moralis

--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "moralis": "^1.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-moralis": "^1.0.0",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-plugin-inline-dotenv": "^1.6.0"
   },
   "private": true
 }
